# law-rag

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  discord-agents.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: .env.example  alembic.ini  pyproject.toml  vercel.json
apps/api/app/: __init__.py  main.py  observability.py  settings.py
apps/api/evaluation/: retrieval-debug-v1.json  retrieval-v1.json
apps/api/migrations/: env.py
apps/api/scripts/: analyze_question_history.py  benchmark_retrieval_latency.py  catalog_smoke.py  contract_smoke.py  debug_retrieval_pipeline.py  evaluate_retrieval.py  sync.py
apps/api/tests/: conftest.py  test_ai_fallback.py  test_anonymous_rate_limit.py  test_answer_quality_contract.py  test_answering.py  test_api.py  test_api_errors.py  test_checklist_exports.py  test_collector_state_loader.py  test_distributed_question_cancellation.py  test_evaluation_quality.py  test_four_stage_repository.py  test_generation_evidence_budget.py  test_grounding_gate.py  test_history_retention_migration.py  test_history_retention_postgres.py  test_law_client.py  test_memory_retrieval_quality.py  test_migration_contract.py  test_mock_auth_history.py  test_nvidia_nim_answerer.py  test_parsers.py  test_postgres_identity.py  test_privacy.py  test_provision_path_search.py  test_question_cancellation.py  test_retrieval_debug_contract.py  test_search_queries.py  test_security_boundaries.py  test_settings.py  test_supabase_auth.py  test_supabase_authenticated_flow.py  test_temporal_search.py
apps/collector/: .env.example  .gitignore  README.md  pyproject.toml
apps/collector/ops/: Invoke-Collector.ps1  Register-CollectorTask.ps1  Unregister-CollectorTask.ps1
docs/: DESIGN.md  PLANS.md  (+7 more)
(+205 files in other folders)
