[project]
name = "law-rag-api"
version = "0.1.0"
description = "분산에너지 법령 RAG API"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "defusedxml>=0.7,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=1.99,<3",
  "pgvector>=0.4,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"app/adapters/postgres_repository.py" = ["E501"]

[tool.vercel]
runtime = "python3.14"
